<resources>
    <string name="app_name">COTAMP</string>
    <string name="menu_home">ラリー選択</string>
    <string name="menu_camera">QRコード</string>
    <string name="menu_config">設定</string>
    <string name="menu_present">特典</string>
    <string name="term_title">【COTAMP利用規約】</string>
    <string name="term_bt_agree">同意</string>
<!--    <string name="term_of_service" translatable="false"><b>【COTAMP利用規約】</b>\n\n\nこの利用規約（以下，「本規約」といいます。）は，株式会社クロスパワー（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。この利用規約（以下，「本規約」といいます。）は，株式会社クロスパワー（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。この利用規約（以下，「本規約」といいます。）は，＿＿＿＿＿（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。この利用規約（以下，「本規約」といいます。）は，＿＿＿＿＿（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</string>-->
    <string name="term_of_service" translatable="false">\n\nこの利用規約（以下，「本規約」といいます。）は，株式会社クロスパワー（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。この利用規約（以下，「本規約」といいます。）は，株式会社クロスパワー（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。この利用規約（以下，「本規約」といいます。）は，＿＿＿＿＿（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。この利用規約（以下，「本規約」といいます。）は，＿＿＿＿＿（以下，「当社」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</string>
    <string name="stamp">スタンプ</string>
    <string name="stamp_get">スタンプの数</string>
    <string name="stamp_count">0/0</string>
    <string name="stamp_spot_name">校舎の屋上の奥の奥</string>
    <string name="stamp_get_reward">景品を獲得する</string>
    <string name="stamp_got_reward">景品獲得済み</string>
    <string name="stamp_camera_qr_already_point">\n\n達成済みのチェックポイントです\n\n</string>
    <string name="stamp_camera_qr_get">\n\nスタンプを獲得しました！\n\n</string>
    <string name="stamp_camera_qr_invalid">\n\n無効なQRコードです\n\n</string>
    <string name="stamp_camera_qr_wrong">\n\n選択中・参加中ではないQRコードです\n\n</string>
    <string name="stamp_camera_qr_error">COTAMPに対応していないQRが読み込まれました</string>
    <string name="stamp_camera_qr_rally_private">\n\n開催期間外です\n\n</string>
    <string name="stamp_camera_qr_open_rally_details">\n\nQRコードに対応するラリーの詳細を表示します\n\n</string>

    <string name="sys_button_close">閉じる</string>

    <string name="button_join">参加する</string>
    <string name="button_select">選択する</string>

    <string name="receive_msg_please">受付の方に画面を提示してください</string>
    <string name="receive_mas_warning">一度受付すると元には戻せません</string>
    <string name="back_to_stamp_card">スタンプカードに戻る</string>
    <string name="after_receive_msg">景品の受け取りが完了しました</string>

    <string name="tab_in_all">すべて</string>
    <string name="tab_joining">参加中</string>
    <string name="tab_ended">終了済み</string>

    <string name="tab_in_session">開催中</string>
    <string name="tab_history">参加履歴</string>
    <string name="tab_reward">特典</string>
    <string name="rally_reward_valid">有効期限: 2024/12/31</string>
    <string name="rally_selected">選択中 ▷ </string>
    <string name="rally_selected_name">ラリーが選択されていません</string>

    <string name="rally_title_01">スタンプラリー 01</string>
    <string name="rally_detail_01">"詳細　　▷ こどもの日は、毎年5月5日に日本で祝われる祝日の一つであり、日本の伝統行事の中でも重要なものの一つです。この日は、子供たちを祝福し、彼らの健やかな成長を願う日とされています。"
</string>


    <string name="dialog_title_permission">Please allow permission</string>
    <string name="dialog_message_camera_permission">Couldn\'t access to camera.\nPlease allow permission from \"App Info\", to code scan</string>
    <string name="toast_permission_required">toast_permission_required.</string>

    <string name="cancel">キャンセル</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_terms">TermsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="setting">設定</string>
    <string name="setting_profile">プロフィール設定</string>
    <string name="setting_mail">メールアドレス設定</string>
    <string name="setting_data_transfer">データ引継ぎ</string>
    <string name="setting_notification">通知</string>
    <string name="setting_announce">お知らせ</string>
    <string name="setting_usage">アプリの使い方</string>
    <string name="setting_info">StampWarsについて</string>
    <string name="setting_contact">お問い合わせ</string>

    <string name="setting_birth">誕生日を選択</string>
    <string name="setting_selected_birth">%d年%d月%d日</string>

    <string name="not_acquired">未取得</string>
    <string name="info_window_tap">タップで取得</string>

    <string name="notification_title_rally_start">まもなく開催されるラリーのお知らせ</string>
    <string name="notification_content_rally_start">%sがまもなく開催されます\nタップで詳細を確認</string>
    <string name="notification_getable">%sのスタンプを取得可能です</string>
    <string name="message_outside_period">ラリー開催期間外です</string>

    <string name="tv_keyword">キーワードからスタンプを取得</string>
    <string name="keyword_send">送信</string>
    <string name="show_reward_url">景品URLを表示する</string>
    <string name="reward_url">景品URL</string>
    <string name="open_url">URLを開く</string>
</resources>
