<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_stamp_list"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="100dp"
    android:topRightRadius="20dp"
    android:topLeftRadius="10dp"
    android:orientation="vertical">

    <!-- android:visibility="gone" -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:lines="2"
        android:text="@string/stamp_get" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#FF0000"
        android:lines="1"
        android:text="@string/stamp_count" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/sumi1"
                    android:adjustViewBounds="true"
                    android:layout_margin="5dp"
                    android:contentDescription="Cover"/>
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="16dp"
                    android:textColor="#FF0000"
                    android:layout_gravity="bottom|center_horizontal"
                    android:lines="1"
                    android:text="@string/stamp_spot_name" />


            </FrameLayout>
        </LinearLayout>


</LinearLayout>
