<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_background"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="110dp"
    android:layout_marginBottom="130dp"
    android:topRightRadius="5dp"
    android:topLeftRadius="5dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_gravity="center_vertical"
            android:textSize="18dp"
            android:textColor="#FFFFFF"
            android:text="@string/stamp_get" />
        <TextView
            android:id="@+id/text_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="80dp"
            android:layout_gravity="right"
            android:textSize="28dp"
            android:textColor="#FFDDDD"
            android:textStyle="bold"
            android:shadowColor="#7777E8"
            android:shadowDx="3.0"
            android:shadowDy="3.0"
            android:shadowRadius="1.5"
            android:text="@string/stamp_count" />


        <Button
            android:visibility="invisible"
            android:id="@+id/button_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/close"
            android:layout_gravity="right|center_vertical"
            />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        android:layout_weight="1"
        tools:layout_editor_absoluteY="1dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/button_reward"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Stw_button"
        android:textSize="18dp"
        android:text="@string/stamp_get_reward"
        android:visibility="visible"/>
    <!--
    android:background="@drawable/button_ripple"
    -->

</LinearLayout>
