<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="150dp"
    android:layout_marginRight="30dp"
    android:layout_marginBottom="90dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:topLeftRadius="5dp"
    android:topRightRadius="5dp">

    <Button
        android:id="@+id/button_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="right|center_vertical"
        android:background="@drawable/close" />

    <ImageView
        android:id="@+id/ivCheckMarkSeal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/checkmark_seal"
        app:tint="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/receive_msg_please"
        android:textColor="@color/primary_20"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="16sp"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            app:srcCompat="@android:drawable/ic_dialog_alert"
            app:tint="@android:color/holo_red_light" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_mas_warning"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Switch
        android:id="@+id/swReceiveReward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:switchMinWidth="200dp"
        android:thumb="@drawable/receive_switch_thumb"
        android:track="@drawable/receive_switch_track" />

    <Button
        android:id="@+id/btBackStampList"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_ripple"
        android:text="@string/back_to_stamp_card"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>
